Updated Transflower Bootstrap UI

--- a/transflower-bootstrap/product.html
+++ b/transflower-bootstrap/product.html
@@ -34,6 +34,26 @@
 
 <body>
 
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="index.html">
+      <i class="bi bi-flower1 me-2"></i>Transflower
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html"><i class="bi bi-house-door"></i> Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="products.html"><i class="bi bi-basket"></i> Products</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html"><i class="bi bi-info-circle"></i> About</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html"><i class="bi bi-envelope"></i> Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <!-- ================= PRODUCTS SECTION ================= -->
 <section class="py-5">
   <div class="container">
@@ -50,6 +70,10 @@
             <p class="text-muted">Elegant bouquet for special moments</p>
             <p class="fw-bold">₹499</p>
             <a href="#" class="btn btn-outline-primary">Buy Now</a>
+
+            <a href="#" class="btn btn-primary">
+            <i class="bi bi-cart-plus"></i> Add to Cart
+            </a>
           </div>
         </div>
       </div>
@@ -57,12 +81,15 @@
       <!-- Product 2 -->
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="./image/Vibrant crocus.jpg" class="card-img-top" alt="Tulip Delight">
+          <img src="./image/tublips.jpg" class="card-img-top" alt="Tulip Delight">
           <div class="card-body text-center">
             <h5 class="card-title">Tulip Delight</h5>
             <p class="text-muted">Fresh tulips to brighten your day</p>
             <p class="fw-bold">₹399</p>
             <a href="#" class="btn btn-outline-primary">Buy Now</a>
+            <a href="#" class="btn btn-primary">
+            <i class="bi bi-cart-plus"></i> Add to Cart
+            </a>
           </div>
         </div>
       </div>
@@ -70,12 +97,15 @@
       <!-- Product 3 -->
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="./image/download (2).jpg" class="card-img-top" alt="Sunflower Joy">
+          <img src="./image/sun.jpg" class="card-img-top" alt="Sunflower Joy">
           <div class="card-body text-center">
             <h5 class="card-title">Sunflower Joy</h5>
             <p class="text-muted">Bring sunshine into your home</p>
             <p class="fw-bold">₹299</p>
             <a href="#" class="btn btn-outline-primary">Buy Now</a>
+            <a href="#" class="btn btn-primary">
+            <i class="bi bi-cart-plus"></i> Add to Cart
+            </a>
           </div>
         </div>
       </div>
@@ -111,7 +141,10 @@
         <div class="row g-4 justify-content-center">
           <div class="col-md-4">
             <div class="card shadow-sm h-100">
-              <img src="./image/bookest.jpg" class="card-img-top" alt="Rose Bouquet">
+              <img src="./image/Red Rose Bouquet.jpg"
+              class="card-img-top img-fluid"
+              alt="Red Roses">
+
               <div class="card-body text-center">
                 <h5 class="card-title">Red Rose Bouquet</h5>
                 <p class="fw-bold">₹599</p>
@@ -127,7 +160,7 @@
         <div class="row g-4 justify-content-center">
           <div class="col-md-4">
             <div class="card shadow-sm h-100">
-              <img src="./image/tulip1.jpg" class="card-img-top" alt="Pink Tulips">
+              <img src="./image/pink tublips.jpg" class="card-img-top" alt="Pink Tulips">
               <div class="card-body text-center">
                 <h5 class="card-title">Pink Tulips</h5>
                 <p class="text-muted">
@@ -145,6 +178,7 @@
       <div class="tab-pane fade" id="orchids">
         <div class="text-center mt-4">
           <p class="fs-5">🌸 Orchid arrangements launching next week</p>
+          
         </div>
       </div>
 
