--- a/transflower-bootstrap/index.html
+++ b/transflower-bootstrap/index.html
@@ -8,13 +8,48 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom CSS -->
   <style>
+    body {
+      background-color: #fff5f8;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    /* ===== PINK THEME ===== */
+    .bg-pink {
+      background-color: #d63384 !important;
+    }
+
+    .text-pink {
+      color: #d63384;
+    }
+
+    .btn-pink {
+      background-color: #d63384;
+      color: white;
+      border-radius: 30px;
+      padding: 8px 22px;
+    }
+
+    .btn-pink:hover {
+      background-color: #ad2168;
+      color: white;
+    }
+
+    /* Cards */
     .product-img {
-      height: 170px;
+      height: 250px;
       object-fit: cover;
-      width: 80%;
-      padding-left: 70px;
+    }
+
+    .card {
+      border: none;
+      border-radius: 20px;
+      transition: 0.3s;
+    }
+
+    .card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 12px 30px rgba(214, 51, 132, 0.3);
     }
   </style>
 </head>
@@ -22,151 +57,81 @@
 <body>
 
 <!-- ================= NAVBAR ================= -->
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+ 
+<nav class="navbar navbar-expand-lg navbar-dark bg-pink">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="index.html">🌼 Transflower</a>
+    <a class="navbar-brand fw-bold" href="index.html">🌸 Transflower Store</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        
+
+        <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="#">Products</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="#">About</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-
-<!-- Hero Section -->
-<section class="bg-light text-center py-5">
+<!-- ================= HERO ================= -->
+<section class="text-center avbar-brand fw-bold py-5 bg-light">
   <div class="container">
-    <h1 class="display-4 fw-bold">Welcome to Transflower Store</h1>
-    <p class="lead">Beautiful flowers, delivered fresh to your doorstep.</p>
+    <h1 class="fw-bold text-dark">Welcome to Transflower Store</h1>
+    <p class="lead ">Beautiful flowers, delivered fresh to your doorstep.</p>
     <a href="#" class="btn btn-primary btn-lg mt-3">Shop Now</a>
   </div>
 </section>
 
-<!-- Product Section -->
-<section class="bg-light py-5">
-        <div class="container">
-            <h2 class="text-center mb-5 fw-bold">Featured Products</h2>
-            <div class="row g-4">
-                <div class="col-md-3">
-                    <div class="card feature-card">
-                        <img src="https://th.bing.com/th/id/R.af05a05f97677caeed74107c4dcd15af?rik=PjZnrLoXwyKgCA&riu=http%3a%2f%2fwww.allabouthappylife.com%2fwallpapers%2froses_bouquets%2f1600%2froses_bouquet_3554.jpg&ehk=MK4DZNlncl1p83oQFwXDeMhno5HfVU87iQNYTTmGc%2b8%3d&risl=&pid=ImgRaw&r=0" class="card-img-top" alt="Product 1">
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Rose Bouquet</h5>
-                            <p class="text-muted"><b>₹899</b></p>
-                            <a href="productdetails.html" class="btn btn-light custom-btn">Buy Now</a>
-                        </div>
-                    </div>
-                </div>
+<!-- ================= PRODUCTS ================= -->
+<section class="py-5">
+  <div class="container">
+    <h2 class="text-center mb-5 fw-bold text-pink">Our Featured Flowers</h2>
 
-      <div class="col-md-4 mb-4">
-        <div class="card">
-          <img src="./image/Vibrant crocus.jpg" class="card-img-top" alt="Flower">
-          <div class="card-body text-center">
-            <h5 class="card-title">Tulip Delight</h5>
-            <p class="card-text">Fresh tulips to brighten your day.</p>
-            <a href="#" class="btn btn-outline-primary">Buy Now</a>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card text-center h-100">
+          <img src="./image/rd.jpg" class="card-img-top product-img">
+          <div class="card-body">
+            <h5 class="fw-bold avbar-brand fw-bold">Red Roses</h5>
+            <p>Elegant bouquet for special moments.</p>
+            <a class="btn btn-primary">Buy Now</a>
           </div>
         </div>
       </div>
 
-      <div class="col-md-4 mb-4">
-        <div class="card">
-          <img src="./image/sun.jpg" class="card-img-top" alt="Flower">
-          <div class="card-body text-center">
-            <h5 class="card-title">Sunflower Joy</h5>
-            <p class="card-text">Bring sunshine into your home.</p>
-            <a href="#" class="btn btn-outline-primary">Buy Now</a>
+      <div class="col-md-4">
+        <div class="card text-center h-100">
+          <img src="./image/Vibrant crocus.jpg" class="card-img-top product-img">
+          <div class="card-body">
+            <h5 class="fw-bold avbar-brand fw-bold">Tulip Delight</h5>
+            <p>Fresh tulips to brighten your day.</p>
+            <a class="btn btn-primary">Buy Now</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card text-center h-100">
+          <img src="./image/sun.jpg" class="card-img-top product-img">
+          <div class="card-body">
+            <h5 class="fw-bold avbar-brand fw-bold">Sunflower Joy</h5>
+            <p>Bring sunshine into your home.</p>
+            <a class="btn btn-primary">Buy Now</a>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-
-<!-- ================= CAROUSEL ================= -->
-<div id="storeCarousel" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-
-    <div class="carousel-item active">
-      <img src="./image/Red tulips, rode tulpen.jpg"
-           class="d-block w-100" alt="Slide 1">
-    </div>
-
-    <div class="carousel-item">
-      <img src="./image/sun.jpg"
-           class="d-block w-100" alt="Slide 2">
-    </div>
-
-    <div class="carousel-item">
-      <img src="./image/Vibrant crocus.jpg"
-           class="d-block w-100" alt="Slide 3">
-    </div>
-
-  </div>
-
-  <button class="carousel-control-prev" type="button" data-bs-target="#storeCarousel" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#storeCarousel" data-bs-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </button>
-</div>
-
-<!-- ================= ABOUT SECTION ================= -->
-<section id="about" class="py-5 bg-light">
-  <div class="container text-center">
-    <h2>About Us</h2>
-    <p class="mt-3">
-      Transflower Store brings you fresh, handpicked flowers for every occasion.
-    </p>
   </div>
 </section>
 
 <!-- ================= FOOTER ================= -->
-<footer class="bg-dark text-white text-center py-3">
-  <p class="mb-0">&copy; 2025 Transflower Store. All rights reserved.</p>
+<footer class="bg-pink text-white text-center py-3">
+  <p class="mb-0">&copy; 2025 Transflower Store 🌸</p>
 </footer>
-
-<!-- ================= CONTACT MODAL ================= -->
-<div class="modal fade" id="contactModal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Contact Transflower Store</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body">
-        <form>
-          <input class="form-control mb-3" placeholder="Your Name">
-          <input class="form-control mb-3" placeholder="Email">
-          <textarea class="form-control mb-3" rows="3" placeholder="Message"></textarea>
-          <button class="btn btn-primary w-100">Send</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- ================= SCROLL TO TOP ================= -->
-<button id="scrollTopBtn" class="btn btn-primary position-fixed bottom-0 end-0 m-4" style="display:none;">↑</button>
-
-<script>
-  const scrollBtn = document.getElementById("scrollTopBtn");
-  window.onscroll = () => {
-    scrollBtn.style.display =
-      document.documentElement.scrollTop > 200 ? "block" : "none";
-  };
-  scrollBtn.onclick = () =>
-    window.scrollTo({ top: 0, behavior: "smooth" });
-</script>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
