--- a/transflower-bootstrap/index.html
+++ b/transflower-bootstrap/index.html
@@ -59,30 +59,28 @@
 <!-- ================= NAVBAR ================= -->
  
 <nav class="navbar navbar-expand-lg navbar-dark bg-pink">
-  <div class="container">
-    <a class="navbar-brand fw-bold" href="index.html">🌸 Transflower Store</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        
-
-        <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#">Products</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#">About</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">🌼 Transflower</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="product.html">Products</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 <!-- ================= HERO ================= -->
 <section class="text-center avbar-brand fw-bold py-5 bg-light">
   <div class="container">
     <h1 class="fw-bold text-dark">Welcome to Transflower Store</h1>
     <p class="lead ">Beautiful flowers, delivered fresh to your doorstep.</p>
-    <a href="#" class="btn btn-primary btn-lg mt-3">Shop Now</a>
+    <a href="product.html" class="btn btn-primary btn-lg mt-3">Shop Now</a>
   </div>
 </section>
 
@@ -94,7 +92,7 @@
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card text-center h-100">
-          <img src="./image/rd.jpg" class="card-img-top product-img">
+          <img src="./image/red rose.jpg" class="card-img-top product-img">
           <div class="card-body">
             <h5 class="fw-bold avbar-brand fw-bold">Red Roses</h5>
             <p>Elegant bouquet for special moments.</p>
@@ -105,7 +103,7 @@
 
       <div class="col-md-4">
         <div class="card text-center h-100">
-          <img src="./image/Vibrant crocus.jpg" class="card-img-top product-img">
+          <img src="./image/tublips.jpg " class="card-img-top product-img">
           <div class="card-body">
             <h5 class="fw-bold avbar-brand fw-bold">Tulip Delight</h5>
             <p>Fresh tulips to brighten your day.</p>
