--- a/transflower-bootstrap/about.html
+++ b/transflower-bootstrap/about.html
@@ -3,109 +3,124 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - Transflower Store</title>
+  <title>Transflower | Testimonials & FAQ</title>
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- Custom CSS -->
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f8f9fa;
-    }
-    .about-header {
-      background-image: url(https://wallpapercave.com/wp/wp9676119.jpg);
-      /* background: linear-gradient(135deg, #a2c4ff, #9c57e6 100%); */
-      background-size: cover;
-      color: white;
-      padding: 80px 0;
-      text-align: center;
-    }
-    .team-card img {
-      border-radius: 50%;
-      width: 120px;
-      height: 120px;
-      object-fit: cover;
-    }
-    .value-icon {
-      font-size: 2rem;
-      color: black;
-    }
-    footer {
-      background-color: gray;
-      color: white;
-      padding: 20px 0;
+    .bg-pink {
+      background-color: #e83e8c;
     }
   </style>
 </head>
+
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg transparent-navbars">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">Transflower Store</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span> 
-      </button>
-      <div id="navbarNav" class="collapse navbar-collapse">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="products.html" class="nav-link">Products</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link active">About Us</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-          <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
-        </ul>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-pink">
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="index.html">🌼 Transflower</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Testimonials -->
+<section class="container my-5">
+  <h2 class="text-center mb-4">What Our Customers Say</h2>
+
+  <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+
+      <div class="carousel-item active text-center">
+        <blockquote class="blockquote">
+          <p class="mb-4">
+            "Transflower never disappoints! My anniversary bouquet was perfect."
+          </p>
+          <footer class="blockquote-footer">Sneha K.</footer>
+        </blockquote>
+      </div>
+
+      <div class="carousel-item text-center">
+        <blockquote class="blockquote">
+          <p class="mb-4">
+            "Fresh flowers and fast delivery — simply beautiful!"
+          </p>
+          <footer class="blockquote-footer">Rahul M.</footer>
+        </blockquote>
+      </div>
+
+      <div class="carousel-item text-center">
+        <blockquote class="blockquote">
+          <p class="mb-4">
+            "Best online flower store in Pune! Highly recommend."
+          </p>
+          <footer class="blockquote-footer">Aditi S.</footer>
+        </blockquote>
+      </div>
+
+    </div>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+
+    <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
+</section>
+
+<!-- FAQ -->
+<section class="container my-5">
+  <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+
+  <div class="accordion" id="faqAccordion">
+
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faq1">
+          How long does delivery take?
+        </button>
+      </h2>
+      <div id="faq1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          We deliver within 24 hours for all Pune city orders and 2–3 days for other cities.
+        </div>
       </div>
     </div>
-  </nav>
 
-  <!-- Header -->
-  <header class="about-header">
-    <div class="container">
-      <h1>About Transflower Store</h1>
-      <p class="lead mt-3">Delivering joy, color, and freshness — one flower at a time.</p>
-    </div>
-  </header>
-
-  <!-- About Section -->
-  <section class="py-5">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6">
-          <img src="https://img.freepik.com/premium-photo/photo-bunch-purple-flowers-book-with-pages-open_763111-161222.jpg" class="img-fluid rounded" alt="Transflower">
-        </div>
-        <div class="col-md-6">
-          <h2 class="fw-bold mb-3">Who We Are</h2>
-          <p class="text-muted">
-            Transflower Store is a trusted name in premium floral products and gifting solutions. 
-            Founded in 2020, we’ve been committed to bringing smiles to our customers through carefully curated flower arrangements and eco-friendly packaging.
-          </p>
-          <p class="text-muted">
-            Our goal is to make every occasion memorable — whether it’s birthdays, weddings, or just a reason to say “thank you.”
-          </p>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2">
+          Can I customize my bouquet?
+        </button>
+      </h2>
+      <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          Absolutely! You can choose flower types, wrapping styles, and message cards.
         </div>
       </div>
     </div>
-  </section>
 
-  <!-- Mission and Vision -->
-  <section class="bg-light py-5">
-    <div class="container text-center">
-      <h2 class="fw-bold mb-4">Our Mission & Vision</h2>
-      <p class="lead text-muted mb-4">
-        We believe flowers have the power to express what words sometimes can’t.  
-        Our mission is to deliver happiness with freshness, reliability, and love.
-      </p>
-      <p class="text-muted">
-        Our vision is to be India’s most trusted flower and gift brand, creating meaningful connections through thoughtful experiences.
-      </p>
-    </div>
-  </section>
+  </div>
+</section>
 
-  
-    
+<!-- Bootstrap JS (IMPORTANT) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Team Section -->
-  <section class="bg-light py-5">
-    <div class="containe
+</body>
+</html>
