--- a/transflower-bootstrap/login.html
+++ b/transflower-bootstrap/login.html
@@ -37,7 +37,41 @@
   </style>
 </head>
 
+
+
+
 <body class="d-flex align-items-center justify-content-center">
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-pink">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">🌼 Transflower</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <div class="card login-card p-4">
     <h2 class="text-center fw-bold mb-2">Transflower Store</h2>
