--- a/transflower-bootstrap/product.html
+++ b/transflower-bootstrap/product.html
@@ -17,6 +17,15 @@
       background-color: #f8f9fa;
     }
 
+    /* Pink Theme */
+    .bg-pink {
+      background-color: #d63384 !important;
+    }
+
+    .text-pink {
+      color: #d63384;
+    }
+
     .card-img-top {
       height: 220px;
       object-fit: cover;
@@ -24,6 +33,12 @@
 
     .card {
       border-radius: 15px;
+      transition: 0.3s;
+    }
+
+    .card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 10px 25px rgba(214, 51, 132, 0.25);
     }
 
     .nav-tabs .nav-link {
@@ -34,78 +49,77 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<!-- ================= NAVBAR ================= -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-pink sticky-top shadow">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="index.html">
-      <i class="bi bi-flower1 me-2"></i>Transflower
+    <a class="navbar-brand fw-bold d-flex align-items-center" href="index.html">
+      🌼 <span class="ms-2">Transflower</span>
     </a>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html"><i class="bi bi-house-door"></i> Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="products.html"><i class="bi bi-basket"></i> Products</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html"><i class="bi bi-info-circle"></i> About</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html"><i class="bi bi-envelope"></i> Contact</a></li>
+      <ul class="navbar-nav ms-auto gap-2">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link active" href="product.html">Products</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<!-- ================= PRODUCTS SECTION ================= -->
+<!-- ================= PRODUCTS ================= -->
 <section class="py-5">
   <div class="container">
-    <h2 class="text-center mb-5 fw-bold">Our Products</h2>
+    <h2 class="text-center mb-5 fw-bold text-pink">Our Products</h2>
 
     <div class="row g-4">
 
-      <!-- Product 1 -->
-      <div class="col-md-4">
+      <!-- Product Card -->
+      <div class="col-12 col-sm-6 col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="./image/rd.jpg" class="card-img-top" alt="Red Roses">
+          <img src="./image/red rose.jpg" class="card-img-top">
           <div class="card-body text-center">
-            <h5 class="card-title">Red Roses</h5>
+            <h5>Red Roses</h5>
             <p class="text-muted">Elegant bouquet for special moments</p>
             <p class="fw-bold">₹499</p>
-            <a href="#" class="btn btn-outline-primary">Buy Now</a>
-
-            <a href="#" class="btn btn-primary">
-            <i class="bi bi-cart-plus"></i> Add to Cart
-            </a>
+            <div class="d-grid gap-2">
+              <a class="btn btn-outline-primary">Buy Now</a>
+              <a class="btn btn-primary"><i class="bi bi-cart-plus"></i> Add to Cart</a>
+            </div>
           </div>
         </div>
       </div>
 
-      <!-- Product 2 -->
-      <div class="col-md-4">
+      <div class="col-12 col-sm-6 col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="./image/tublips.jpg" class="card-img-top" alt="Tulip Delight">
+          <img src="./image/tublips.jpg" class="card-img-top">
           <div class="card-body text-center">
-            <h5 class="card-title">Tulip Delight</h5>
+            <h5>Tulip Delight</h5>
             <p class="text-muted">Fresh tulips to brighten your day</p>
             <p class="fw-bold">₹399</p>
-            <a href="#" class="btn btn-outline-primary">Buy Now</a>
-            <a href="#" class="btn btn-primary">
-            <i class="bi bi-cart-plus"></i> Add to Cart
-            </a>
+            <div class="d-grid gap-2">
+              <a class="btn btn-outline-primary">Buy Now</a>
+              <a class="btn btn-primary"><i class="bi bi-cart-plus"></i> Add to Cart</a>
+            </div>
           </div>
         </div>
       </div>
 
-      <!-- Product 3 -->
-      <div class="col-md-4">
+      <div class="col-12 col-sm-6 col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="./image/sun.jpg" class="card-img-top" alt="Sunflower Joy">
+          <img src="./image/sun.jpg" class="card-img-top">
           <div class="card-body text-center">
-            <h5 class="card-title">Sunflower Joy</h5>
+            <h5>Sunflower Joy</h5>
             <p class="text-muted">Bring sunshine into your home</p>
             <p class="fw-bold">₹299</p>
-            <a href="#" class="btn btn-outline-primary">Buy Now</a>
-            <a href="#" class="btn btn-primary">
-            <i class="bi bi-cart-plus"></i> Add to Cart
-            </a>
+            <div class="d-grid gap-2">
+              <a class="btn btn-outline-primary">Buy Now</a>
+              <a class="btn btn-primary"><i class="bi bi-cart-plus"></i> Add to Cart</a>
+            </div>
           </div>
         </div>
       </div>
@@ -114,84 +128,172 @@
   </div>
 </section>
 
-<!-- ================= TAB COLLECTION SECTION ================= -->
+<section class="container my-5">
+  <h2 class="text-center mb-4 text-danger fw-bold">
+    Our Bestselling Bouquets
+  </h2>
+
+  <div class="row g-4">
+    <!-- Card 1 -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="card h-100 shadow-sm text-center">
+        <img src="./image/Red Rose  Bouquets.jpg" class="card-img-top bouquet-img" alt="Red Roses">
+        <div class="card-body">
+          <h5 class="fw-bold">Red Roses</h5>
+          <p class="text-muted mb-3">₹599</p>
+          <button class="btn btn-outline-danger w-100">Buy Now</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 2 -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="card h-100 shadow-sm text-center">
+        <img src="./image/Yellow Roses.jpg" class="card-img-top bouquet-img" alt="Yellow Tulips">
+        <div class="card-body">
+          <h5 class="fw-bold">Yellow Roses</h5>
+          <p class="text-muted mb-3">₹699</p>
+          <button class="btn btn-outline-danger w-100">Buy Now</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="card h-100 shadow-sm text-center">
+        <img src="./image/white orchids bouquet.jpg" class="card-img-top bouquet-img" alt="White Orchids">
+        <div class="card-body">
+          <h5 class="fw-bold">White Orchids</h5>
+          <p class="text-muted mb-3">₹799</p>
+          <button class="btn btn-outline-danger w-100">Buy Now</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 4 -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="card h-100 shadow-sm text-center">
+        <img src="./image/pink lilies bouquet.jpg" class="card-img-top bouquet-img" alt="Pink Lilies">
+        <div class="card-body">
+          <h5 class="fw-bold">Pink Lilies</h5>
+          <p class="text-muted mb-3">₹749</p>
+          <button class="btn btn-outline-danger w-100">Buy Now</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+</section>
+
+<!-- ================= TAB COLLECTION ================= -->
 <section class="py-5 bg-white">
   <div class="container">
+    <h2 class="text-center mb-4 fw-bold text-pink">Explore Our Collections</h2>
 
-    <h2 class="text-center mb-4 fw-bold">Explore Our Collections</h2>
-
-    <!-- Tabs -->
-    <ul class="nav nav-tabs justify-content-center mb-4" role="tablist">
-      <li class="nav-item">
-        <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#roses">Roses</button>
-      </li>
-      <li class="nav-item">
-        <button class="nav-link" data-bs-toggle="tab" data-bs-target="#tulips">Tulips</button>
-      </li>
-      <li class="nav-item">
-        <button class="nav-link" data-bs-toggle="tab" data-bs-target="#orchids">Orchids</button>
-      </li>
+    <ul class="nav nav-tabs justify-content-center mb-4">
+      <li class="nav-item"><button class="nav-link active" data-bs-toggle="tab" data-bs-target="#roses">Roses</button></li>
+      <li class="nav-item"><button class="nav-link" data-bs-toggle="tab" data-bs-target="#tulips">Tulips</button></li>
+      <li class="nav-item"><button class="nav-link" data-bs-toggle="tab" data-bs-target="#orchids">Orchids</button></li>
     </ul>
 
-    <!-- Tab Content -->
-    <div class="tab-content">
+   <div class="tab-content">
 
-      <!-- Roses -->
-      <div class="tab-pane fade show active" id="roses">
-        <div class="row g-4 justify-content-center">
-          <div class="col-md-4">
-            <div class="card shadow-sm h-100">
-              <img src="./image/Red Rose Bouquet.jpg"
-              class="card-img-top img-fluid"
-              alt="Red Roses">
+    
 
-              <div class="card-body text-center">
-                <h5 class="card-title">Red Rose Bouquet</h5>
-                <p class="fw-bold">₹599</p>
-                <a href="#" class="btn btn-outline-primary btn-sm">Buy Now</a>
-              </div>
-            </div>
+  <!-- ================= ROSES TAB ================= -->
+<div class="tab-pane fade show active" id="roses">
+  <p class="fs-5 text-center mb-4">🌹 Premium Rose Bouquets Available</p>
+
+  <div class="row g-4 justify-content-center">
+    <div class="col-12 col-sm-6 col-md-4">
+      <div class="card h-100 shadow-sm">
+        <img src="./image/White Rose.jpg" class="card-img-top" alt="White Roses">
+
+        <div class="card-body text-center">
+          <h5>White Roses</h5>
+          <p class="fw-bold">₹399</p>
+
+          <div class="d-flex justify-content-center gap-2">
+            <a href="checkout.html" class="btn btn-outline-primary">Buy Now</a>
+
+            <button class="btn btn-primary add-to-cart"
+              data-name="White Roses" data-price="399">
+              <i class="bi bi-cart-plus"></i> Add to Cart
+            </button>
           </div>
+
         </div>
       </div>
-
-      <!-- Tulips -->
-      <div class="tab-pane fade" id="tulips">
-        <div class="row g-4 justify-content-center">
-          <div class="col-md-4">
-            <div class="card shadow-sm h-100">
-              <img src="./image/pink tublips.jpg" class="card-img-top" alt="Pink Tulips">
-              <div class="card-body text-center">
-                <h5 class="card-title">Pink Tulips</h5>
-                <p class="text-muted">
-                  Soft pink tulips symbolizing care & affection
-                </p>
-                <p class="fw-bold">₹499</p>
-                <a href="#" class="btn btn-outline-primary btn-sm">Buy Now</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Orchids -->
-      <div class="tab-pane fade" id="orchids">
-        <div class="text-center mt-4">
-          <p class="fs-5">🌸 Orchid arrangements launching next week</p>
-          
-        </div>
-      </div>
-
     </div>
   </div>
+</div>
+
+
+  <!-- ================= TULIPS TAB ================= -->
+ <div class="tab-pane fade" id="tulips">
+  <p class="fs-5 text-center mb-4">🌷 Fresh Tulips Collection</p>
+
+  <div class="row g-4 justify-content-center">
+    <div class="col-12 col-sm-6 col-md-4">
+      <div class="card h-100 shadow-sm">
+        <img src="./image/Yellow Tulips  Bouquets.jpg" class="card-img-top" alt="Yellow Tulips">
+
+        <div class="card-body text-center">
+          <h5>Yellow Tulips</h5>
+          <p class="fw-bold">₹459</p>
+
+          <div class="d-flex justify-content-center gap-2">
+            <a href="checkout.html" class="btn btn-outline-primary">Buy Now</a>
+
+            <button class="btn btn-primary add-to-cart"
+              data-name="Yellow Tulips" data-price="459">
+              <i class="bi bi-cart-plus"></i> Add to Cart
+            </button>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  <!-- ================= ORCHIDS TAB ================= -->
+  <div class="tab-pane fade" id="orchids">
+  <p class="fs-5 text-center mb-4">🌸 Orchid Arrangements Launching Soon</p>
+
+  <div class="row g-4 justify-content-center">
+    <div class="col-12 col-sm-6 col-md-4">
+      <div class="card h-100 shadow-sm opacity-75">
+        <img src="./image/Purple orchid bouquet.jpg" class="card-img-top" alt="Purple Orchid">
+
+        <div class="card-body text-center">
+          <h5>Purple Orchid</h5>
+          <p class="text-muted">Launching Soon</p>
+
+          <div class="d-flex justify-content-center gap-2">
+            <a class="btn btn-outline-secondary disabled">Buy Now</a>
+            <button class="btn btn-secondary" disabled>Coming Soon</button>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+</div>
+
 </section>
 
+
 <!-- ================= FOOTER ================= -->
-<footer class="bg-light text-center py-3">
-  <p class="mb-0">&copy; 2025 Transflower Store. All rights reserved.</p>
+<footer class="bg-pink text-white text-center py-3">
+  <p class="mb-0">&copy; 2025 Transflower Store 🌸</p>
 </footer>
 
-<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
