Changes new file

--- a/transflower-bootstrap/about.html
+++ b/transflower-bootstrap/about.html
@@ -10,9 +10,14 @@
 
   <!-- Custom CSS -->
   <style>
-    .bg-pink {
-      background-color: #e83e8c;
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: url("https://i.pinimg.com/736x/1a/80/c4/1a80c4fab193890f7f9fa0ff2d157acc.jpg");
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
     }
+      
   </style>
 </head>
 
@@ -30,9 +35,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
+        <li class="nav-item"><a class="nav-link" href="product.html">Products</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
       </ul>
     </div>
   </div>
