--- a/transflower-bootstrap/contact.html
+++ b/transflower-bootstrap/contact.html
@@ -8,10 +8,39 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom CSS -->
   <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: url("https://i.pinimg.com/736x/1a/80/c4/1a80c4fab193890f7f9fa0ff2d157acc.jpg");
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+    }
+
     .bg-pink {
       background-color: #e83e8c;
+    }
+
+    .contact-card {
+      background: rgba(255, 255, 255, 0.85);
+      backdrop-filter: blur(10px);
+      border-radius: 20px;
+      padding: 30px;
+      box-shadow: 0 15px 30px rgba(0,0,0,0.2);
+    }
+
+    .form-control {
+      border-radius: 12px;
+    }
+
+    .btn-pink {
+      background-color: #e83e8c;
+      color: white;
+      border-radius: 12px;
+    }
+
+    .btn-pink:hover {
+      background-color: #d63384;
     }
   </style>
 </head>
@@ -19,65 +48,71 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-pink">
-        <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">🌼 Transflower</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="product.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-pink shadow">
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="index.html">🌼 Transflower</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="product.html">Products</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <!-- Contact Section -->
-<section class="py-5 bg-light">
+<section class="py-5">
   <div class="container">
-    <h2 class="text-center mb-4 fw-bold">Get in Touch</h2>
+    <h2 class="text-center fw-bold text-dark mb-4">
+      🌸 Get in Touch With Us
+    </h2>
 
     <div class="row justify-content-center">
       <div class="col-md-6">
 
-  <!-- Success Alert (form वर ठेवायचा) -->
-  <div id="successAlert" class="alert alert-success d-none text-center">
-    ✅ Thank you! Your message has been sent successfully.
+        <div class="contact-card">
+
+          <div id="successAlert" class="alert alert-success d-none text-center">
+            ✅ Thank you! Your message has been sent successfully.
+          </div>
+
+          <form id="contactForm">
+
+            <div class="mb-3">
+              <label class="form-label fw-semibold">Your Name</label>
+              <input type="text" class="form-control" placeholder="Enter your name" required>
+            </div>
+
+            <div class="mb-3">
+              <label class="form-label fw-semibold">Email</label>
+              <input type="email" class="form-control" placeholder="Enter your email" required>
+            </div>
+
+            <div class="mb-3">
+              <label class="form-label fw-semibold">Message</label>
+              <textarea class="form-control" rows="4" placeholder="Write your message" required></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-pink w-100 fw-bold">
+              🌺 Send Message
+            </button>
+
+          </form>
+        </div>
+
+      </div>
+    </div>
   </div>
-
-  <!-- Form -->
-  <form id="contactForm">
-
-    <div class="mb-3">
-      <label class="form-label">Your Name</label>
-      <input type="text" class="form-control" placeholder="Enter your name" required>
-    </div>
-
-    <div class="mb-3">
-      <label class="form-label">Email</label>
-      <input type="email" class="form-control" placeholder="Enter your email" required>
-    </div>
-
-    <div class="mb-3">
-      <label class="form-label">Message</label>
-      <textarea class="form-control" rows="4" placeholder="Write your message" required></textarea>
-    </div>
-
-    <button type="submit" class="btn btn-danger w-100">
-      Send Message
-    </button>
-
-  </form>
-</div>
-
 </section>
 
-<!-- Bootstrap JS (IMPORTANT) -->
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
