--- a/transflower-bootstrap/index.html
+++ b/transflower-bootstrap/index.html
@@ -9,9 +9,19 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
+    /* ===== FULL PAGE BACKGROUND FIX ===== */
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+
     body {
-      background-color: #fff5f8;
       font-family: 'Segoe UI', sans-serif;
+      min-height: 100vh;
+      background-image: url("https://i.pinimg.com/736x/1a/80/c4/1a80c4fab193890f7f9fa0ff2d157acc.jpg");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
     }
 
     /* ===== PINK THEME ===== */
@@ -35,7 +45,13 @@
       color: white;
     }
 
-    /* Cards */
+    /* ===== HERO SECTION ===== */
+    .hero-section {
+      background: rgba(255, 255, 255, 0.75);
+      backdrop-filter: blur(6px);
+    }
+
+    /* ===== CARDS ===== */
     .product-img {
       height: 250px;
       object-fit: cover;
@@ -44,6 +60,7 @@
     .card {
       border: none;
       border-radius: 20px;
+      background: rgba(255, 255, 255, 0.9);
       transition: 0.3s;
     }
 
@@ -51,35 +68,39 @@
       transform: translateY(-8px);
       box-shadow: 0 12px 30px rgba(214, 51, 132, 0.3);
     }
+
+    section {
+      background: transparent;
+    }
   </style>
 </head>
 
 <body>
 
 <!-- ================= NAVBAR ================= -->
- 
 <nav class="navbar navbar-expand-lg navbar-dark bg-pink">
-        <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">🌼 Transflower</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="product.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="index.html">🌼 Transflower</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="product.html">Products</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <!-- ================= HERO ================= -->
-<section class="text-center avbar-brand fw-bold py-5 bg-light">
+<section class="text-center py-5">
   <div class="container">
     <h1 class="fw-bold text-dark">Welcome to Transflower Store</h1>
-    <p class="lead ">Beautiful flowers, delivered fresh to your doorstep.</p>
+    <p class="lead">Beautiful flowers, delivered fresh to your doorstep.</p>
     <a href="product.html" class="btn btn-primary btn-lg mt-3">Shop Now</a>
   </div>
 </section>
@@ -87,14 +108,14 @@
 <!-- ================= PRODUCTS ================= -->
 <section class="py-5">
   <div class="container">
-    <h2 class="text-center mb-5 fw-bold text-pink">Our Featured Flowers</h2>
+    <h2 class="text-center mb-5 fw-bold text-dark">Our Featured Flowers</h2>
 
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card text-center h-100">
-          <img src="./image/red rose.jpg" class="card-img-top product-img">
+          <img src="./image/red rose.jpg" class="card-img-top product-img" alt="Red Roses">
           <div class="card-body">
-            <h5 class="fw-bold avbar-brand fw-bold">Red Roses</h5>
+            <h5 class="fw-bold">Red Roses</h5>
             <p>Elegant bouquet for special moments.</p>
             <a class="btn btn-primary">Buy Now</a>
           </div>
@@ -103,9 +124,9 @@
 
       <div class="col-md-4">
         <div class="card text-center h-100">
-          <img src="./image/tublips.jpg " class="card-img-top product-img">
+          <img src="./image/tublips.jpg" class="card-img-top product-img" alt="Tulips">
           <div class="card-body">
-            <h5 class="fw-bold avbar-brand fw-bold">Tulip Delight</h5>
+            <h5 class="fw-bold">Tulip Delight</h5>
             <p>Fresh tulips to brighten your day.</p>
             <a class="btn btn-primary">Buy Now</a>
           </div>
@@ -114,9 +135,9 @@
 
       <div class="col-md-4">
         <div class="card text-center h-100">
-          <img src="./image/sun.jpg" class="card-img-top product-img">
+          <img src="./image/sun.jpg" class="card-img-top product-img" alt="Sunflowers">
           <div class="card-body">
-            <h5 class="fw-bold avbar-brand fw-bold">Sunflower Joy</h5>
+            <h5 class="fw-bold">Sunflower Joy</h5>
             <p>Bring sunshine into your home.</p>
             <a class="btn btn-primary">Buy Now</a>
           </div>
