--- a/transflower-bootstrap/login.html
+++ b/transflower-bootstrap/login.html
@@ -18,6 +18,12 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
+      padding-top: 80px; /* space for navbar */
+    }
+
+    /* Custom Pink Navbar */
+    .bg-pink {
+      background-color: #e83e8c;
     }
 
     .login-card {
@@ -27,78 +33,66 @@
       background-color: #ffffff;
     }
 
-    .form-control {
-      border-radius: 10px;
-    }
-
-    .btn-primary {
+    .form-control,
+    .btn {
       border-radius: 10px;
     }
   </style>
 </head>
 
+<body>
 
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-pink fixed-top">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="index.html">🌼 Transflower</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-
-<body class="d-flex align-items-center justify-content-center">
-
-  <nav class="navbar navbar-expand-lg navbar-dark bg-pink">
-        <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">🌼 Transflower</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <div class="card login-card p-4">
-    <h2 class="text-center fw-bold mb-2">Transflower Store</h2>
-    <h5 class="text-center mb-4">Login</h5>
-
-    <div class="mb-3">
-      <label class="form-label">Email address</label>
-      <input type="email" class="form-control" placeholder="Enter your email">
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="product.html">Products</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+        </ul>
+      </div>
     </div>
+  </nav>
 
-    <div class="mb-3">
-      <label class="form-label">Password</label>
-      <input type="password" class="form-control" placeholder="Enter your password">
-    </div>
+  <!-- Login Card -->
+  <div class="container d-flex justify-content-center align-items-center">
+    <div class="card login-card p-4">
+      <h2 class="text-center fw-bold mb-2">Transflower Store</h2>
+      <h5 class="text-center mb-4">Login</h5>
 
-    <div class="form-check mb-3">
-      <input class="form-check-input" type="checkbox">
-      <label class="form-check-label">Remember Me</label>
-    </div>
+      <div class="mb-3">
+        <label class="form-label">Email address</label>
+        <input type="email" class="form-control" placeholder="Enter your email">
+      </div>
 
-    <button class="btn btn-primary w-100 mb-3">Login</button>
+      <div class="mb-3">
+        <label class="form-label">Password</label>
+        <input type="password" class="form-control" placeholder="Enter your password">
+      </div>
 
-    <div class="text-center">
-      <a href="#" class="d-block mb-2">Forgot Password?</a>
-      <span>Don't have an account? <a href="#">Register</a></span>
+      <div class="form-check mb-3">
+        <input class="form-check-input" type="checkbox">
+        <label class="form-check-label">Remember Me</label>
+      </div>
+
+      <button class="btn btn-primary w-100 mb-3">Login</button>
+
+      <div class="text-center">
+        <a href="#" class="d-block mb-2">Forgot Password?</a>
+        <span>Don't have an account? <a href="#">Register</a></span>
+      </div>
     </div>
   </div>
 
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
