--- a/transflower-bootstrap/index.html
+++ b/transflower-bootstrap/index.html
@@ -42,7 +42,7 @@
 
     .btn-pink:hover {
       background-color: #ad2168;
-      color: white;
+      color: pink;
     }
 
     /* ===== HERO SECTION ===== */
@@ -86,11 +86,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="product.html">Products</a></li>
+         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="product.html">Products</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
         <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+      </ul>
+      </ul>
       </ul>
     </div>
   </div>
@@ -101,8 +104,10 @@
   <div class="container">
     <h1 class="fw-bold text-dark">Welcome to Transflower Store</h1>
     <p class="lead">Beautiful flowers, delivered fresh to your doorstep.</p>
-    <a href="product.html" class="btn btn-primary btn-lg mt-3">Shop Now</a>
+    <a href="register.html" class="btn btn-primary btn-lg mt-3">Shop Now</a>
   </div>
+  
+  
 </section>
 
 <!-- ================= PRODUCTS ================= -->
@@ -143,8 +148,42 @@
           </div>
         </div>
       </div>
+      
+      </div>
     </div>
   </div>
+
+  <button class="carousel-control-prev" type="button" data-bs-target="#storeCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#storeCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
+  </div>
+  <section class="container my-5">
+  <h2 class="text-center mb-4">What Our Customers Say</h2>
+
+  <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+
+      <div class="carousel-item active text-center">
+        <blockquote class="blockquote">
+          <p class="mb-4">
+            "Transflower never disappoints! My anniversary bouquet was perfect."
+          </p>
+          <footer class="blockquote-footer">Sneha K.</footer>
+        </blockquote>
+      </div>
+
+      <div class="carousel-item text-center">
+        <blockquote class="blockquote">
+          <p class="mb-4">
+            "Fresh flowers and fast delivery — simply beautiful!"
+          </p>
+          <footer class="blockquote-footer">Rahul M.</footer>
+        </blockquote>
+      </div>
 </section>
 
 <!-- ================= FOOTER ================= -->
