--- a/transflower-bootstrap/about.html
+++ b/transflower-bootstrap/about.html
@@ -3,27 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Transflower | Testimonials & FAQ</title>
+  <title>Transflower Store</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom CSS -->
   <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: url("https://i.pinimg.com/736x/1a/80/c4/1a80c4fab193890f7f9fa0ff2d157acc.jpg");
+      min-height: 100vh;
+      background-image: url("https://i.pinimg.com/736x/1a/80/c4/1a80c4fab193890f7f9fa0ff2d157acc.jpg");
       background-size: cover;
       background-position: center;
-      background-attachment: fixed;
+      background-repeat: no-repeat;
     }
-      
+
+    /* Pink Theme */
+    .bg-pink {
+      background-color: #d63384 !important;
+    }
+
+    .btn-pink {
+      background-color: #d63384;
+      color: white;
+      border-radius: 30px;
+      padding: 8px 22px;
+    }
+
+    .btn-pink:hover {
+      background-color: #ad2168;
+      color: #ffd6e7;
+    }
+
+    /* About section glass effect */
+    .about-section {
+      background: rgba(255, 255, 255, 0.85);
+      backdrop-filter: blur(6px);
+      border-radius: 20px;
+      padding: 30px;
+    }
+
+    footer {
+      background-color: #d63384;
+    }
   </style>
 </head>
 
 <body>
 
-<!-- Navbar -->
+<!-- ================= NAVBAR ================= -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-pink">
   <div class="container">
     <a class="navbar-brand fw-bold" href="index.html">🌼 Transflower</a>
@@ -34,98 +67,44 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="product.html">Products</a></li>
+        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
         <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<!-- Testimonials -->
-<section class="container my-5">
-  <h2 class="text-center mb-4">What Our Customers Say</h2>
+<!-- ================= ABOUT SECTION ================= -->
+<div class="container my-5">
+  <h2 class="text-center text-pink mb-4">About Transflower Store</h2>
 
-  <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-
-      <div class="carousel-item active text-center">
-        <blockquote class="blockquote">
-          <p class="mb-4">
-            "Transflower never disappoints! My anniversary bouquet was perfect."
-          </p>
-          <footer class="blockquote-footer">Sneha K.</footer>
-        </blockquote>
-      </div>
-
-      <div class="carousel-item text-center">
-        <blockquote class="blockquote">
-          <p class="mb-4">
-            "Fresh flowers and fast delivery — simply beautiful!"
-          </p>
-          <footer class="blockquote-footer">Rahul M.</footer>
-        </blockquote>
-      </div>
-
-      <div class="carousel-item text-center">
-        <blockquote class="blockquote">
-          <p class="mb-4">
-            "Best online flower store in Pune! Highly recommend."
-          </p>
-          <footer class="blockquote-footer">Aditi S.</footer>
-        </blockquote>
-      </div>
-
+  <div class="row align-items-center about-section shadow-lg">
+    <div class="col-md-6 mb-3 mb-md-0">
+      <img src="./image/tfl store.jpeg" class="img-fluid rounded shadow" alt="About Transflower">
     </div>
 
-    <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-
-    <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </button>
+    <div class="col-md-6">
+      <p>
+        <strong>Transflower Store</strong> is a leading online flower and gift retailer known for creativity and quality.
+        We believe in spreading joy through nature’s beauty.
+      </p>
+      <p>
+        Founded in 2020, we have delivered happiness to over <strong>10,000+</strong> customers across India.
+        Every bouquet, plant, or hamper is handpicked with love.
+      </p>
+    </div>
   </div>
-</section>
+</div>
 
-<!-- FAQ -->
-<section class="container my-5">
-  <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+<!-- ================= FOOTER ================= -->
+<footer class="bg-pink text-white text-center p-3 mt-5">
+  <p>&copy; 2025 Transflower Store. Built with ❤️ using Bootstrap 5.</p>
+</footer>
 
-  <div class="accordion" id="faqAccordion">
-
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faq1">
-          How long does delivery take?
-        </button>
-      </h2>
-      <div id="faq1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
-        <div class="accordion-body">
-          We deliver within 24 hours for all Pune city orders and 2–3 days for other cities.
-        </div>
-      </div>
-    </div>
-
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2">
-          Can I customize my bouquet?
-        </button>
-      </h2>
-      <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-        <div class="accordion-body">
-          Absolutely! You can choose flower types, wrapping styles, and message cards.
-        </div>
-      </div>
-    </div>
-
-  </div>
-</section>
-
-<!-- Bootstrap JS (IMPORTANT) -->
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
