--- a/transflower-bootstrap/contact.html
+++ b/transflower-bootstrap/contact.html
@@ -47,10 +47,11 @@
 
 <body>
 
-<!-- Navbar -->
+<!-- ================= NAVBAR ================= -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-pink shadow">
   <div class="container">
     <a class="navbar-brand fw-bold" href="index.html">🌼 Transflower</a>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -58,16 +59,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="product.html">Products</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
         <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<!-- Contact Section -->
+<!-- ================= CONTACT SECTION ================= -->
 <section class="py-5">
   <div class="container">
     <h2 class="text-center fw-bold text-dark mb-4">
@@ -76,7 +77,6 @@
 
     <div class="row justify-content-center">
       <div class="col-md-6">
-
         <div class="contact-card">
 
           <div id="successAlert" class="alert alert-success d-none text-center">
@@ -84,7 +84,6 @@
           </div>
 
           <form id="contactForm">
-
             <div class="mb-3">
               <label class="form-label fw-semibold">Your Name</label>
               <input type="text" class="form-control" placeholder="Enter your name" required>
@@ -103,17 +102,31 @@
             <button type="submit" class="btn btn-pink w-100 fw-bold">
               🌺 Send Message
             </button>
-
           </form>
-        </div>
 
+        </div>
       </div>
     </div>
   </div>
 </section>
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<!-- ================= FOOTER ================= -->
+<footer class="bg-pink text-white text-center p-3">
+  <p class="mb-0">&copy; 2025 Transflower Store. Built with ❤️ using Bootstrap 5.</p>
+</footer>
 
+<!-- ================= JS ================= -->
+<script>
+  const form = document.getElementById("contactForm");
+  const alertBox = document.getElementById("successAlert");
+
+  form.addEventListener("submit", function (e) {
+    e.preventDefault();
+    alertBox.classList.remove("d-none");
+    form.reset();
+  });
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
