--- a/transflower-bootstrap/product.html
+++ b/transflower-bootstrap/product.html
@@ -67,12 +67,12 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto gap-2">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link active" href="product.html">Products</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-        </ul>
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
+        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+      </ul>
       </div>
     </div>
   </nav>
@@ -141,28 +141,50 @@
 
     <div class="row g-4">
       <!-- Card 1 -->
-      <div class="col-12 col-md-6 col-lg-4">
-        <div class="card h-100 shadow-sm text-center">
-          <img src="./image/Red Rose  Bouquets.jpg" class="card-img-top bouquet-img" alt="Red Roses">
-          <div class="card-body">
-            <h5 class="fw-bold">Red Roses</h5>
-            <p class="text-muted mb-3">₹599</p>
-            <button class="btn btn-outline-primary w-100">Buy Now</button>
-          </div>
-        </div>
+ <div class="col-12 col-md-6 col-lg-4">
+  <div class="card h-100 shadow-sm text-center">
+
+    <img src="./image/Red Rose  Bouquets.jpg"
+         class="card-img-top bouquet-img"
+         alt="Red Roses">
+
+    <div class="card-body">
+      <h5 class="fw-bold">Red Roses</h5>
+      <p class="text-muted mb-3">₹599</p>
+    <div class="d-grid gap-2"> <button class="btn btn-outline-primary">Buy Now</button>
+    <button class="btn btn-primary">
+    <i class="bi bi-cart-plus me-2"></i> Add to Cart
+        </button>
       </div>
 
+    </div>
+  </div>
+</div>
+
+
       <!-- Card 2 -->
-      <div class="col-12 col-md-6 col-lg-4">
-        <div class="card h-100 shadow-sm text-center">
-          <img src="./image/Yellow Roses.jpg" class="card-img-top bouquet-img" alt="Yellow Tulips">
-          <div class="card-body">
-            <h5 class="fw-bold">Yellow Roses</h5>
-            <p class="text-muted mb-3">₹699</p>
-            <button class="btn btn-outline-primary w-100">Buy Now</button>
-          </div>
-        </div>
+<div class="col-12 col-md-6 col-lg-4">
+  <div class="card h-100 shadow-sm text-center">
+
+    <img src="./image/Yellow Roses.jpg"
+         class="card-img-top bouquet-img"
+         alt="Yellow Roses">
+
+    <div class="card-body">
+      <h5 class="fw-bold">Yellow Roses</h5>
+      <p class="text-muted mb-3">₹699</p>
+
+      <div class="d-grid gap-2">
+        <button class="btn btn-outline-primary">Buy Now</button>
+
+        <button class="btn btn-primary">
+          <i class="bi bi-cart-plus me-2"></i> Add to Cart
+        </button>
       </div>
+
+    </div>
+  </div>
+</div>
 
       <!-- Card 3 -->
       <div class="col-12 col-md-6 col-lg-4">
@@ -171,7 +193,9 @@
           <div class="card-body">
             <h5 class="fw-bold">White Orchids</h5>
             <p class="text-muted mb-3">₹799</p>
-            <button class="btn btn-outline-primary w-100">Buy Now</button>
+            <div class="d-grid gap-2">
+            <button class="btn btn-outline-primary">Buy Now</button>
+            <a class="btn btn-primary"><i class="bi bi-cart-plus me-2"></i> Add to Cart</a>
           </div>
         </div>
       </div>
@@ -223,6 +247,8 @@
             </div>
           </div>
         </div>
+
+        
 
 
         <!-- ================= TULIPS TAB ================= -->
@@ -284,9 +310,9 @@
 
 
   <!-- ================= FOOTER ================= -->
-  <footer class="bg-pink text-white text-center py-3">
-    <p class="mb-0">&copy; 2025 Transflower Store 🌸</p>
-  </footer>
+ <footer class="bg-pink text-white text-center p-3 mt-5">
+  <p>&copy; 2025 Transflower Store. Built with ❤️ using Bootstrap 5.</p>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
